--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.2.0",
+    "express-jwt": "^6.0.0",
+    "jwks-rsa": "^1.12.2",
     "next": "10.0.6",
+    "rbx": "^2.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.3"
   }
 }
