--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
     "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.12.2",
     "next": "10.0.6",
     "rbx": "^2.2.0",
@@ -17,6 +18,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "tslib": "^2.1.0",
