--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
+    "axios": "^0.21.1",
+    "dots-wrapper": "^3.5.2",
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.12.2",
+    "minecraft-server-ping": "0.0.3",
     "next": "10.0.6",
+    "p-whilst": "^2.1.0",
     "rbx": "^2.2.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "swr": "^0.4.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.0",
